20070515 debugger/{breakpoint.[ch],command.c},widget/debugger.c: add
         more comprehensive widget debugger (patch #1150698) (Darren).
20070515 compat/mkstemp.c,if1.c: use O_BINARY in mkstemp() and if1_plug(),
         fixes +3 disk support on Win32 (patch #1716167) (thanks,
         Mark Woodmass) (Stuart Brady).
20070515 configure.in,ui/aalib/*: retire the aalib code, use the aalib
         target for SDL if required (Fred).
20070516 widget/filesel.c: fix possible buffer overflows and tidy code
	 (includes patch #1720377) (thanks, Arda Erdikmen) (Stuart Brady and
	 Phil).
20070517 ui/sdl/sdlui.c: prompt to see if we really want to exit
         (fixes bug #1720384) (thanks, Stuart Brady) (Fred).
20070519 utils.c: add Amiga settings and temp dir paths (part of patch
         #1712260) (Chris Young).
20070519 debugger/{commandl.l,commandy.y}: fix clashes with Amiga API
	 (more of patch #1712260) (Chris Young).
20070519 ui/options.dat: allow 5 digit emulation speed (patch #1718215)
	 (Stuart Brady).
20070519 Makefile.am,configure.in,windres.rc: add resource file to allow
	 for an icon for the Win32 build (patch #1716742) (Stuart Brady).
20070519 .cvsignore: ignore more auto-generated files.
20070520 Delete .cvsignore files and ignore some files not automatically
	 ignored by Subversion.
20070520 compat.h,fuse.c,trdos.c,utils.[ch],compat/dirname.c,widget/filesel.c:
	 allow for configurable path separator (patch #1714630) (Stuart Brady).
20070522 sound/{coreaudiosound.c,sdlsound.c}: try to prevent the consumption
         of partial samples with the sfifo using sound interfaces (Fred).
20070522 fuse.c,if1.c: don't use rand_r as it's not available on all platforms
         (thanks, Stuart Brady) (Fred).
20070522 widget/filesel.c: include utils.h for prototype for
         utils_is_absolute_path (Fred).
20070522 widget: ignore *.a libraries (Fred).
20070522 compat: ignore *.a libraries (Fred).
20070522 if1.c: don't need time.h anymore (thanks, Stuart Brady) (Fred).