@@ -1673,3 +1673,5 @@
 20070522 widget: ignore *.a libraries (Fred).
 20070522 compat: ignore *.a libraries (Fred).
 20070522 if1.c: don't need time.h anymore (thanks, Stuart Brady) (Fred).
+20070524 z80/z80.pl,z80/tests/27_1.{in,out}: fix undocumented behaviour of
+	 DAA (patch #1724193) (Stuart Brady).
